--- a/survey.html
+++ b/survey.html
@@ -122,7 +122,7 @@
 				else if (elem.value == '빨리 결정하는 것이 낫다') 
                 {
 				I = I + 1;
-				location.href = "result.html?" + M + "/" + B + "/" + T + "/" + I;
+				location.href = "result.html?" + M + "9" + B + "9" + T + "9" + I + "9";
                 }
 
 			
@@ -238,7 +238,7 @@
 				else if (elem.value == '빨리 결정하는 것이 낫다') 
                 {
 				I = I - 1;
-				location.href = "result.html?" + M + "/" + B + "/" + T + "/" + I;
+				location.href = "result.html?" + M + "9" + B + "9" + T + "9" + I + "9";
                 }
 
 			
