--- a/result.html
+++ b/result.html
@@ -78,7 +78,7 @@
             </div>
             <script language="javascript">
                 temp = location.href.split('?');
-                data = temp[1].split('/');
+                data = temp[1].split('9');
 
                 M = data[0];
                 B = data[1];
@@ -386,7 +386,7 @@
         </script>
         <footer id = "footer">
             <h3>개발자 연락처</h3>
-            <p>류대희 이현비 박영규 | fbeogmlsla@gmail.com</p>
+            <p>류대희 - 개발 및 기획 | fbeogmlsla@gmail.com<br>이현비 - UI 디자인 및 개발 | beeee2@naver.com<br>박영규 - 기획 | fbeogmlsla@gmail.com</p>
         </footer>
 		<script>
 			document.getElementById('footer').style.display = 'none';
