--- a/result.html
+++ b/result.html
@@ -115,11 +115,11 @@
                 if (MBTI == 'ISTJ') {
                     document.getElementById('name1').innerHTML = '페키니즈';
                     document.getElementById('name2').innerHTML = '당신은 침착하고 자신감있는';
-                    document.getElementById('text1').innerHTML = '주어진 일을 책임감 있게 해내요';
+                    document.getElementById('text1').innerHTML = '"맡겨만 주십쇼!" 주어진 일을 책임감 있게 해내요';
                     document.getElementById('text2').innerHTML = '합리적이고 냉철해요';
                     document.getElementById('text3').innerHTML =
-                        '원칙적이고 규칙적인 것을 좋아해요';
-                    document.getElementById('text4').innerHTML = '과묵한 편이에요';
+                        '"FM 대로!" 원칙적이고 규칙적인 것을 좋아해요';
+                    document.getElementById('text4').innerHTML = '"필요한 말만 한다" 과묵한 편이에요';
 					document.getElementById("img").src = "./img/pekinize.png";
 					document.getElementById('dog1').innerHTML = '래브라도<br>리트리버';
 					document.getElementById('dog2').innerHTML = '골든<br>리트리버';
@@ -132,7 +132,7 @@
                     document.getElementById('name2').innerHTML = '당신은 용맹하고 충성심있는';
                     document.getElementById('text1').innerHTML =
                         '타인에게는 관대하나 자신에게는 엄격한 기준을 가지고 있어요';
-                    document.getElementById('text2').innerHTML = '독립적이에요';
+                    document.getElementById('text2').innerHTML = '고양이들 처럼 독립적이에요';
                     document.getElementById('text3').innerHTML =
                         '약속을 철저하게 지키려고 노력해요';
                     document.getElementById('text4').innerHTML = '정해진 틀을 선호를 해요';
@@ -145,13 +145,13 @@
 				
 				else if (MBTI == 'INFJ') {
                     document.getElementById('name1').innerHTML = '오스트레일리언 셰퍼드';
-                    document.getElementById('name2').innerHTML = '당신은 강아지계의 에너자이저';
+                    document.getElementById('name2').innerHTML = '당신은 강아지들의 에너자이저';
                     document.getElementById('text1').innerHTML =
                         '통찰력, 창의력이 뛰어나 아이디어 뱅크에요';
-                    document.getElementById('text2').innerHTML = '인내심이 뛰어나요';
-                    document.getElementById('text3').innerHTML = '갈등을 싫어하여 회피하려고 해요';
+                    document.getElementById('text2').innerHTML = '참을성과 인내심이 뛰어나요';
+                    document.getElementById('text3').innerHTML = '갈등은 NoNo! 갈등을 회피하려고 해요';
                     document.getElementById('text4').innerHTML =
-                        '자신만의 확고한 신념을 가지고 있어 열정이 넘쳐요';
+                        '자신만의 확고한 신념을 가지고 있어 열정이 넘쳐요!';
 					document.getElementById("img").src = "./img/ostseperd.png";
 					document.getElementById('dog1').innerHTML = '비글<br>&nbsp;';
 					document.getElementById('dog2').innerHTML = '시베리안<br>허스키';
@@ -163,8 +163,8 @@
                     document.getElementById('name1').innerHTML = '잭 러셀 테리어';
                     document.getElementById('name2').innerHTML = '당신은 영리한';
                     document.getElementById('text1').innerHTML =
-                        '합리적이고 공정성을 중요하게 생각해요';
-                    document.getElementById('text2').innerHTML = '목표를 세우면 어떻게든 해내요';
+                        '"나는야 뇌색견!" 합리적이고 공정성을 중요하게 생각해요';
+                    document.getElementById('text2').innerHTML = '"내 사전에 포기란 없다!" 목표를 세우면 어떻게든 해내요';
                     document.getElementById('text3').innerHTML =
                         '세상을 논리적이고 객관적으로 바라보려고 해요';
                     document.getElementById('text4').innerHTML = '통찰력이 뛰어나요';
@@ -212,7 +212,7 @@
                     document.getElementById('name2').innerHTML = '당신은 친해지면 애정넘치는';
                     document.getElementById('text1').innerHTML =
                         '처음에 낯을 가리지만 친해지면 애정이 넘쳐 흘러요';
-                    document.getElementById('text2').innerHTML = '이해심과 관용이 넘쳐요';
+                    document.getElementById('text2').innerHTML = '"다 괜찮아!" 이해심과 관용이 넘쳐요';
                     document.getElementById('text3').innerHTML = '낭만적이고 내적 신념이 확고해요';
                     document.getElementById('text4').innerHTML = '호기심이 많고 창의적이에요';
 					document.getElementById("img").src = "./img/terrier.png";
@@ -228,7 +228,7 @@
                     document.getElementById('name2').innerHTML = '당신은 똑똑하고 스마트한';
                     document.getElementById('text1').innerHTML =
                         '직관력이 높아 지적인 면이 매우 뛰어나요';
-                    document.getElementById('text2').innerHTML = '혼자만의 시간을 선호해요';
+                    document.getElementById('text2').innerHTML = '"혼자가 편해!" 혼자만의 시간을 선호해요';
                     document.getElementById('text3').innerHTML = '아이디어가 넘쳐요';
                     document.getElementById('text4').innerHTML = '논리적이고 객관적이에요';
 					document.getElementById("img").src = "./img/chawu.png";
@@ -242,7 +242,7 @@
                     //alert("안녕하세요");
                     document.getElementById('name1').innerHTML = '비글';
                     document.getElementById('name2').innerHTML = '당신은 활동적이고 호기심 많은';
-                    document.getElementById('text1').innerHTML = '삶을 즐기면서 살아요';
+                    document.getElementById('text1').innerHTML = '"카르페디엠" 삶을 즐기면서 살아요';
                     document.getElementById('text2').innerHTML = '즉흥적인 행동을 선호해요';
                     document.getElementById('text3').innerHTML =
                         '한가지에 집중하기 보다 여러 가지에 집중하는게 더 꿀잼이에요';
@@ -260,7 +260,7 @@
                     document.getElementById('name2').innerHTML = '당신은 열정적이고 사교적인';
                     document.getElementById('text1').innerHTML =
                         '열정적이고 에너지가 넘치는 에너자이저에요';
-                    document.getElementById('text2').innerHTML = '즐거움을 선호해요';
+                    document.getElementById('text2').innerHTML = '"YOLO" 즐거움을 선호해요';
                     document.getElementById('text3').innerHTML = '사교적이고 활동적이에요';
                     document.getElementById('text4').innerHTML = '낙천적이고 친절해요';
 					document.getElementById("img").src = "./img/welsicoki.png";
@@ -289,7 +289,7 @@
                     //alert("안녕하세요");
                     document.getElementById('name1').innerHTML = '프렌치 불독';
                     document.getElementById('name2').innerHTML = '당신은 혈기왕성하고 자기주장이 강한';
-                    document.getElementById('text1').innerHTML = '머리가 좋고, 직관력이 뛰어나요';
+                    document.getElementById('text1').innerHTML = '"나는 뇌색견!" 머리가 좋고, 직관력이 뛰어나요';
                     document.getElementById('text2').innerHTML = '유머가 넘쳐요';
                     document.getElementById('text3').innerHTML =
                         '자존감이 높고, 자기 확신이 강해요';
@@ -312,14 +312,14 @@
                     document.getElementById('text4').innerHTML = '자기관리가 철저해요';
 					document.getElementById('dog1').innerHTML = '티베탄<br>테리어';
 					document.getElementById('dog2').innerHTML = '오스트레일리언<br>셰퍼드';
-					document.getElementById("img1").src = "./img/tibetan.png";
+					document.getElementById("img1").src = "./img/terrier.png";
 					document.getElementById("img2").src = "./img/ostseperd.png";
                 }
 				
 				else if (MBTI == 'ESFJ') {
                     //alert("안녕하세요");
                     document.getElementById('name1').innerHTML = '비숑 프리제';
-                    document.getElementById('name2').innerHTML = '당신은 강아지계의 천사';
+                    document.getElementById('name2').innerHTML = '당신은 강아지들의 천사';
                     document.getElementById('text1').innerHTML = '매우 사교적이에요';
                     document.getElementById('text2').innerHTML = '즐거운 것을 추구해요';
                     document.getElementById('text3').innerHTML = '타인을 돕는 것을 좋아해요';
@@ -335,7 +335,7 @@
                     //alert("안녕하세요");
                     document.getElementById('name1').innerHTML = '골든 리트리버';
                     document.getElementById('name2').innerHTML = '당신은 주변사람을 사랑하는';
-                    document.getElementById('text1').innerHTML = '사람을 정말 좋아해요';
+                    document.getElementById('text1').innerHTML = '"I love human" 사람을 정말 좋아해요';
                     document.getElementById('text2').innerHTML =
                         '계획적이라 계획을 세우고 실행하는 것을 선호해요';
                     document.getElementById('text3').innerHTML = '재미있는 성격을 가지고 있어요';
@@ -355,7 +355,7 @@
                     document.getElementById('text1').innerHTML = '우두머리의 성향을 나고 났어요';
                     document.getElementById('text2').innerHTML = '계획적이고 체계적이에요';
                     document.getElementById('text3').innerHTML = '지적 욕구가 넘쳐 똑똑해요';
-                    document.getElementById('text4').innerHTML = '계획을 세우고 행해요';
+                    document.getElementById('text4').innerHTML = '"나는야 인싸견" 혼자있는 것을 싫어해요';
 					document.getElementById("img").src = "./img/tibetan.png";
 					document.getElementById('dog1').innerHTML = '시바견';
 					document.getElementById('dog2').innerHTML = '저먼 셰퍼드';
@@ -386,7 +386,7 @@
         </script>
         <footer id = "footer">
             <h3>개발자 연락처</h3>
-            <p>류대희 - 개발 및 기획 | fbeogmlsla@gmail.com<br>이현비 - UI 디자인 및 개발 | beeee2@naver.com<br>박영규 - 기획 | qkrwnl221@naver.com</p>
+            <p>류대희 - 기획 및 개발 | fbeogmlsla@gmail.com<br>이현비 - UI 디자인 및 개발 | beeee2@naver.com<br>박영규 - 기획 및 마케팅 | qkrwnl221@naver.com</p>
         </footer>
 		<script>
 			document.getElementById('footer').style.display = 'none';
