--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="index-main">
         <span>MBTI로 보는</span>
         <h1>나의 강아지 유형</h1>
-        <img class="index-main__dog-logo" src="https://raw.githubusercontent.com/beeee2/dog-mbti/e6ae0c6a7ff0aa893c8ca01c8a0e282f0e5cf0db/img/size.png" alt="">
+        <img class="index-main__dog-logo" src="./img/size.png" alt="">
         <form action="survey.html">
             <button class="index-main__startBtn" type="text">시작하기</button>
         </form>
