--- a/survey.html
+++ b/survey.html
@@ -276,10 +276,9 @@
     <main>
         <div class="question-container">
             <p1>나는 혼자만의<br/>시간을 가질 때</p1>
+			<span id = 'time'>(1/12)</span>
         </div>
-		<div class="questiontime-container" id = "time">
-            <p>(1/12)</p>
-        </div>
+
         <form action="result.html" class="check-container">
             <input type="button" class="check" name = "btn1" id = "btn1" value="에너지가 충전이 된다." onclick="change()"/>
             <input type="button" class="check" name = "btn2" id = "btn2" value="에너지가 충전이 되지 않는다." onclick="change2()"/>
