--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">about test</a></li>
-            <li><a href="#">about us</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="#">Study</a></li>
+            <li><a href="#">For you</a></li>
         </ul>
     </nav>
     <main class="index-main">
