--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta
+            name="keywords"
+            content="강아지 MBTI, dog mbti, mbti dog, mbti 강아지, puppy mbti, mbti로 보는 나의 강아지 유형, 비글, 비숑, 불독, 셰퍼드, 페키니즈, 리트리버, 티베탄 테리어, 웰시코기, 강아지 성격, mbti 테스트, 강아지 mbti 테스트"
+        />
     <title>MBTI로 보는 나의 강아지 유형</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#">Study</a></li>
             <li><a href="#">For you</a></li>
@@ -23,5 +27,11 @@
             <button class="index-main__startBtn" type="text">시작하기</button>
         </form>
     </main>
+	
+	    <section class="youtube pb-3" id="yotube-mid-link">
+        <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center">
+            <h1><center><a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작도움 By 조코딩 유튜브 채널</a></center></h1>
+        </div>
+    </section>
 </body>
 </html>
