--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             name="keywords"
             content="강아지 MBTI, dog mbti, mbti dog, mbti 강아지, puppy mbti, mbti로 보는 나의 강아지 유형, 비글, 비숑, 불독, 셰퍼드, 페키니즈, 리트리버, 티베탄 테리어, 웰시코기, 강아지 성격, mbti 테스트, 강아지 mbti 테스트"
         />
-    <title>MBTI로 보는 나의 강아지 유형</title>
+    <title>MBTI로 보는 나의 강아지 유형2</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
