--- a/blog.html
+++ b/blog.html
@@ -27,54 +27,27 @@
                     <li><a href="#">일상 이야기</a></li>
                     <li><a href="#">경제와 관련해서</a></li>
                     <li><a href="#">이런저런 이야기</a></li>
-                    <li><a href="blog/Interior.html">집 인테리어</a></li>
+                    <li><a href="#">집 인테리어</a></li>
                 </ul>
             </div>
         </aside>
         <section>
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
+            <h2>MBTI 강아지 테스트 소개</h2>
+            <p>&nbsp;MBTI로 보는 나의 강아지 유형 테스트는 MBTI 테스트 12가지 질문을 통해 자신의 MBTI를 확인하고 그 성격에 맞는 강아지 유형을 알 수 있는 테스트입니다. 총 16가지 결과와 강아지 16종을 연결하여 성격과 매치했으며, 강아지의 습성과 사용자의 성격을 매치시켜 결과창을 표현하였습니다. 결과창은 공유하기 기능을 통해 카카오톡, 페이스북, 트위터 등으로 공유가 가능하며 친구들과 결과를 비교해보며 즐기기에 괜찮은 테스트입니다.
             </p><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
+            <p>&nbsp;The MBTI Test for My Dog Type is a test that lets you check your MBTI through 12 questions on the MBTI test and find out what type of dog fits your personality. A total of 16 results and 16 types of dogs were linked to match the personality, and the result window was expressed by matching the dog's habits and the user's personality. The result window can be shared through KakaoTalk, Facebook, Twitter, etc. through the Share function, and it is a good test to enjoy while comparing the results with friends.
             </p><br>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
+            <p>&nbsp;MBTI我的狗类型测试是一项测试，可让您通过MBTI测试中的12个问题检查MBTI，并找出适合您个性的狗类型。总共链接了16条结果和16种类型的狗以匹配其个性，并且通过匹配狗的习惯和用户的个性来表示结果窗口。结果窗口可以通过共享功能通过KakaoTalk，Facebook，Twitter等共享，这是与朋友比较结果时享受的一个很好的测试
+            </p><br>
+            <p>&nbsp;MBTIで見る私の子犬の種類のテストは、MBTIテスト12の質問を介して自分のMBTIを確認し、その性格に合った犬の種類を知ることができるテストです。 16種類の結果と犬16種を接続して、性格とマッチしており、犬の習性とユーザーの性格をマッチさせて、結果ウィンドウを表現しました。結果ウィンドウは、共有機能を使用してカカオトーク、フェイスブック、ツイッターなどで共有が可能であり、友達との結果を比較して見て楽しむのにまともなテストです。
             </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore cum similique deserunt rerum odit eum quasi quia officia maxime a nobis dolores optio, aliquid quisquam ratione, necessitatibus obcaecati nisi illo.
-            </p>
+            
         </section>
         <a href="#" id="back-to-top">TOP</a>
     </main>
     <footer>
         <span>개발자 연락처<br>
-            류대희 이현비 박영규 | abc@naver.com
+            류대희 이현비 박영규 | fbeogmlsla@gmail.com
         </span>
     </footer>
     <script src="topscroll.js"></script>
