--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 	
 	    <section class="youtube pb-3" id="yotube-mid-link">
         <div class="container mt-3 youtube-cover d-flex flex-row-reverse align-items-center">
-            <h1><center><a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작도움 By 조코딩 유튜브 채널</a></center></h1>
+            <h1><center><a href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg" class="youtube-link">제작도움 : 조코딩 유튜브 채널</a><img src="img/youtube-copy.jpg" alt="youtube-icon" class="youtube-icon"></center></h1>
+			
         </div>
     </section>
 </body>
