--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         />
     <title>MBTI로 보는 나의 강아지 유형</title>
     <link rel="stylesheet" href="css/styles.css">
+	<script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <nav>
