--- a/survey.html
+++ b/survey.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI로 보는 나의 강아지 유형</title>
     <link rel="stylesheet" href="css/styles.css">
+	<script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<script language="javascript">
 				var M = 0;
 				var B = 0;
