--- a/result.html
+++ b/result.html
@@ -8,7 +8,7 @@
         <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5f0cc6da0ec33fb8"></script>
-
+<script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </head>
 
     <body>
