--- a/result.html
+++ b/result.html
@@ -122,7 +122,7 @@
                     document.getElementById('text3').innerHTML =
                         '"FM 대로!" 원칙적이고 규칙적인 것을 좋아해요';
                     document.getElementById('text4').innerHTML = '"필요한 말만 한다" 과묵한 편이에요';
-					document.getElementById('text5').innerHTML = '"나는 포커페이스" 겉보기에 차가워 보인다는 말을 자주 들어요';
+					document.getElementById('text5').innerHTML = '"나는 포커페이스" 겉보기에 차가워 보인다는 말을 자주 들어요 하지만 속은 따뜻해요';
 					document.getElementById("img").src = "./img/pekinize.png";
 					document.getElementById('dog1').innerHTML = '래브라도<br>리트리버';
 					document.getElementById('dog2').innerHTML = '골든<br>리트리버';
@@ -139,7 +139,7 @@
                     document.getElementById('text3').innerHTML =
                         '"약속은 생명!" 약속을 철저하게 지키려고 노력해요';
                     document.getElementById('text4').innerHTML = '"규칙은 지켜야 제맛" 정해진 틀을 선호를 해요';
-					document.getElementById('text5').innerHTML = '과거 회상을 좋아하고 남들이 기억하기 힘든 세세한 추억들까지 간직하고 있는 경우가 많아요';
+					document.getElementById('text5').innerHTML = '"추억은 소중해" 과거 회상을 좋아하고 남들이 기억하기 힘든 세세한 추억들까지 간직하고 있는 경우가 많아요';
 					document.getElementById("img").src = "./img/german.png";
 					document.getElementById('dog1').innerHTML = '프랜치 불독<br>&nbsp;';
 					document.getElementById('dog2').innerHTML = '티베탄<br>마스티프';
@@ -168,12 +168,12 @@
                     document.getElementById('name1').innerHTML = '잭 러셀 테리어';
                     document.getElementById('name2').innerHTML = '당신은 영리한';
                     document.getElementById('text1').innerHTML =
-                        '"나는야 뇌색견!" 합리적이고 공정성을 중요하게 생각해요';
+                        '"최소 노력으로 최대 효율을!" 합리적이고 공정성을 중요하게 생각해요';
                     document.getElementById('text2').innerHTML = '"내 사전에 포기란 없다!" 목표를 세우면 어떻게든 해내요';
                     document.getElementById('text3').innerHTML =
                         '"나는 이과견" 세상을 논리적이고 객관적으로 바라보려고 해요';
                     document.getElementById('text4').innerHTML = '예리한 관찰력, 통찰력이 뛰어나요';
-					document.getElementById('text5').innerHTML = '"생각하는 로뎅견" 생각이 많으며, 복잡한 사고활동을 즐겨요';
+					document.getElementById('text5').innerHTML = '"생각한다는건 살아있다는 뜻.." 생각이 많으며, 복잡한 사고활동을 즐겨요';
 					document.getElementById("img").src = "./img/jack.png";
 					document.getElementById('dog1').innerHTML = '웰시코기';
 					document.getElementById('dog2').innerHTML = '비숑 프리제';
@@ -188,7 +188,7 @@
                     document.getElementById('text2').innerHTML = '"규칙은 깨야 제맛!" 틀에 박힌 것을 싫어해요';
                     document.getElementById('text3').innerHTML = '"나는야 콜롬버스 견" 활동성이 높고 모험심이 풍부해요';
                     document.getElementById('text4').innerHTML = '고정관념이 뭔가요?';
-					document.getElementById('text5').innerHTML = '마음에 없는 소리를 잘 못해요 영혼이 없다는 소리를 가끔 듣지만 티내지 않으려 노력해요';
+					document.getElementById('text5').innerHTML = '"솔직한 것이 최고!" 마음에 없는 소리를 잘 못해요, 영혼이 없다는 소리를 가끔 듣지만 티내지 않으려 노력해요';
 					document.getElementById("img").src = "./img/lodigian.png";
 					document.getElementById('dog1').innerHTML = '골든<br>리트리버';
 					document.getElementById('dog2').innerHTML = '레브라도<br>리트리버';
@@ -208,7 +208,7 @@
                     document.getElementById('text4').innerHTML =
                         '현재의 삶을 즐기는 걸 선호해 느긋하고 태평해요(I’m 거북)';
 					document.getElementById('text5').innerHTML =
-                        '생각보다 상처를 받거나 예민해지기 쉬워요, 남을 도와주고서 충분히 대가를 받지 못하기도 해요';
+                        '"잘 보듬어주세요" 생각보다 상처를 받거나 예민해지기 쉬워요, 남을 도와주고서 대가를 받지 못하기도 해요';
 					document.getElementById("img").src = "./img/siba.png";
 					document.getElementById('dog1').innerHTML = '티베탄<br>마스티프';
 					document.getElementById('dog2').innerHTML = '프렌치 불독<br>&nbsp;';
@@ -241,7 +241,7 @@
                     document.getElementById('text2').innerHTML = '"혼자가 편해!" 혼자만의 시간을 선호해요';
                     document.getElementById('text3').innerHTML = '"나는 발명왕 에디슨!" 아이디어가 넘쳐요';
                     document.getElementById('text4').innerHTML = '"나는 이과견!" 논리적이고 객관적이에요';
-					document.getElementById('text5').innerHTML = '마음에 없는 소리를 잘 못해요. 그래서 상대방 입장에서는 영혼없는 사람처럼 보일 수 있어요';
+					document.getElementById('text5').innerHTML = '"솔직한것이 최고!" 마음에 없는 소리를 잘 못해요, 그래서 리액션이 부족해 보일 수 있어요';
 					document.getElementById("img").src = "./img/chawu.png";
 					document.getElementById('dog1').innerHTML = '비숑 프리제';
 					document.getElementById('dog2').innerHTML = '웰시코기';
@@ -274,8 +274,8 @@
                         '열정적이고 에너지가 넘치는 강아지들의 에너자이저에요';
                     document.getElementById('text2').innerHTML = '"YOLO" 즐거움을 선호해요';
                     document.getElementById('text3').innerHTML = '"나는 강아지들의 인싸!" 사교적이고 활동적이에요';
-                    document.getElementById('text4').innerHTML = '"그정도 가지고 뭘~" 낙천적이고 친절해요';
-					document.getElementById('text5').innerHTML = '정이 많은 이유 때문인지 거절을 잘 못하지만 경우에 따라 아주 냉정하기도 해요';
+                    document.getElementById('text4').innerHTML = '"다 괜찮아~" 낙천적이고 친절해요';
+					document.getElementById('text5').innerHTML = '"시골 인심 팍팍!" 정이 많은 이유 때문인지 거절을 잘 못하지만 경우에 따라 아주 냉정하기도 해요';
 					document.getElementById("img").src = "./img/welsicoki.png";
 					document.getElementById('dog1').innerHTML = '잭 러셀 테리어';
 					document.getElementById('dog2').innerHTML = '차우차우<br>&nbsp;';
@@ -291,7 +291,7 @@
                     document.getElementById('text2').innerHTML = '"나는야 인싸견" 새로운 사람 만나는 것을 좋아해요';
                     document.getElementById('text3').innerHTML = '"해피바이러스 전파견" 재기발랄한 성격이에요';
                     document.getElementById('text4').innerHTML = '정이 많고 감수성이 풍부해요';
-					document.getElementById('text5').innerHTML = '겉모습은 강해 보이나 내면은 여려요, 상처를 받으면 겉으론 무덤덤해보이지만 속으로는 많이 슬퍼해요';
+					document.getElementById('text5').innerHTML = '"잘 보듬어주세요~" 겉모습은 강해 보이나 내면은 여려요, 상처를 받으면 겉으론 무덤덤해보이지만 속으로는 많이 슬퍼해요';
 					document.getElementById("img").src = "./img/revrado.png";
 					document.getElementById('dog1').innerHTML = '페키니즈<br>';
 					document.getElementById('dog2').innerHTML = '로디지안<br>리지백';
@@ -310,7 +310,7 @@
                     document.getElementById('text4').innerHTML =
                         '주관과 가치관이 뚜렷해 자기 주장이 강해요';
 					document.getElementById('text5').innerHTML =
-                        '좋아하는 사람에겐 다정하지만 싫어하는 사람에겐 가차없어요, 사람에 대한 호불호가 확실한 편이에요';
+                        '"내사람은 내가 지킨다!" 좋아하는 사람에겐 다정하지만 싫어하는 사람에겐 가차없어요, 사람에 대한 호불호가 확실한 편이에요';
 					document.getElementById("img").src = "./img/buldog.png";
 					document.getElementById('dog1').innerHTML = '저먼 셰퍼드';
 					document.getElementById('dog2').innerHTML = '시바견';
@@ -327,7 +327,7 @@
                     document.getElementById('text3').innerHTML =
                         '논리적이고 객관적이라 규칙적인 것을 중요하게 생각해요';
                     document.getElementById('text4').innerHTML = '"나 자신을 업그레이드!" 자기관리가 철저해요';
-					document.getElementById('text5').innerHTML = '싸움을 싫어하지만 싸워서 지는 것도 싫어해요';
+					document.getElementById('text5').innerHTML = '"나는 평화주의자 하지만 누가 건든다면?" 싸움을 싫어하지만 싸워서 지는 것도 싫어해요';
 					document.getElementById("img").src = "./img/huski.png";
 					document.getElementById('dog1').innerHTML = '티베탄<br>테리어';
 					document.getElementById('dog2').innerHTML = '오스트레일리언<br>셰퍼드';
@@ -362,7 +362,7 @@
                     document.getElementById('text4').innerHTML =
                         '현실보다는 더 나은 이상을 추구해요';
 					document.getElementById('text5').innerHTML =
-                        '본인이 어려움에 처했을 때, 타인에게 짐을 지우기 싫어해서 도움을 요청하지 못하는 경우가 많아요';
+                        '"짐이 되는건 싫어" 본인이 어려움에 처했을 때, 타인에게 짐을 지우기 싫어해서 도움을 요청하지 못하는 경우가 많아요';
 					document.getElementById("img").src = "./img/goldritriver.png";
 					document.getElementById('dog1').innerHTML = '로디지안<br>리지백';
 					document.getElementById('dog2').innerHTML = '페키니즈<br> ';
@@ -378,7 +378,7 @@
                     document.getElementById('text2').innerHTML = '"오늘 할일은 해야지!" 계획적이고 체계적이에요';
                     document.getElementById('text3').innerHTML = '"나는야 뇌색견" 지적 욕구가 넘쳐 똑똑해요';
                     document.getElementById('text4').innerHTML = '"외로운건 NoNo!" 혼자있는 것을 싫어해요';
-					document.getElementById('text5').innerHTML = '자기 주관이 가장 확고하기 때문에 소위 말하는 꼰대들을 제일 싫어해요';
+					document.getElementById('text5').innerHTML = '"꼰대는 싫어요" 자기 주관이 확고하기 때문에 소위 말하는 꼰대들을 제일 싫어해요';
 					document.getElementById("img").src = "./img/tibetan.png";
 					document.getElementById('dog1').innerHTML = '시바견';
 					document.getElementById('dog2').innerHTML = '저먼 셰퍼드';
