--- a/result.html
+++ b/result.html
@@ -275,7 +275,7 @@
                     document.getElementById('text2').innerHTML = '"YOLO" 즐거움을 선호해요';
                     document.getElementById('text3').innerHTML = '"나는 강아지들의 인싸!" 사교적이고 활동적이에요';
                     document.getElementById('text4').innerHTML = '"다 괜찮아~" 낙천적이고 친절해요';
-					document.getElementById('text5').innerHTML = '"시골 인심 팍팍!" 정이 많은 이유 때문인지 거절을 잘 못하지만 경우에 따라 아주 냉정하기도 해요';
+					document.getElementById('text5').innerHTML = '"정주나요?" 정이 많은 이유 때문인지 거절을 잘 못하지만 경우에 따라 아주 냉정하기도 해요';
 					document.getElementById("img").src = "./img/welsicoki.png";
 					document.getElementById('dog1').innerHTML = '잭 러셀 테리어';
 					document.getElementById('dog2').innerHTML = '차우차우<br>&nbsp;';
@@ -323,11 +323,11 @@
                     document.getElementById('name1').innerHTML = '시베리안 허스키';
                     document.getElementById('name2').innerHTML = '당신은 활동적이고 도전적인';
                     document.getElementById('text1').innerHTML = '"오늘 할일은 해야지!" 계획적이에요';
-                    document.getElementById('text2').innerHTML = '"무한~도전~" 도전 정신이 강해요';
+                    document.getElementById('text2').innerHTML = '"도전은 즐거워" 도전 정신이 강해요';
                     document.getElementById('text3').innerHTML =
                         '논리적이고 객관적이라 규칙적인 것을 중요하게 생각해요';
                     document.getElementById('text4').innerHTML = '"나 자신을 업그레이드!" 자기관리가 철저해요';
-					document.getElementById('text5').innerHTML = '"나는 평화주의자 하지만 누가 건든다면?" 싸움을 싫어하지만 싸워서 지는 것도 싫어해요';
+					document.getElementById('text5').innerHTML = '"나는 평화주의자?" 싸움을 싫어하지만 싸워서 지는 것도 싫어해요';
 					document.getElementById("img").src = "./img/huski.png";
 					document.getElementById('dog1').innerHTML = '티베탄<br>테리어';
 					document.getElementById('dog2').innerHTML = '오스트레일리언<br>셰퍼드';
