--- a/blog.html
+++ b/blog.html
@@ -24,8 +24,8 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">일상 이야기</a></li>
-                    <li><a href="#">경제와 관련해서</a></li>
+                    <li><a href="index.html">메인화면으로</a></li>
+                    <li><a href="blog/1.html">SULLEN 홍보</a></li>
                     <li><a href="#">이런저런 이야기</a></li>
                     <li><a href="#">집 인테리어</a></li>
                 </ul>
