--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="index.html">메인화면으로</a></li>
                     <li><a href="blog/1.html">SULLEN 홍보</a></li>
-                    <li><a href="#">이런저런 이야기</a></li>
+                    <li><a href="blog/2.html">MBTI에 관하여</a></li>
                     <li><a href="#">집 인테리어</a></li>
                 </ul>
             </div>
