--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <title>blog</title>
     <link rel="stylesheet" href="css/screens/blog.css">
     <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
-    	<script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
+    <script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <header>
