--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <title>blog</title>
     <link rel="stylesheet" href="css/screens/blog.css">
     <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
-    <script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-2929681409679243" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <header>
@@ -28,7 +28,7 @@
                     <li><a href="index.html">메인화면으로</a></li>
                     <li><a href="blog/1.html">SULLEN 홍보</a></li>
                     <li><a href="blog/2.html">MBTI에 관하여</a></li>
-                    <li><a href="#">집 인테리어</a></li>
+                    <li><a href="blog/3.html">MBTI와 강아지</a></li>
                 </ul>
             </div>
         </aside>
