--- a/result.html
+++ b/result.html
@@ -409,7 +409,7 @@
         </script>
         <footer id = "footer">
             <h3>개발자 연락처</h3>
-            <p>류대희 - 기획 및 개발 | fbeogmlsla@gmail.com<br>이현비 - UI 디자인 및 개발 | beeee2@naver.com<br>박영규 - 기획 및 마케팅 | qkrwnl221@naver.com</p>
+            <p>DayDay - 기획 및 개발 | fbeogmlsla@gmail.com<br>개복치 - UI 디자인 및 개발 | beeee2@naver.com<br>0q - 기획 및 마케팅 | qkrwnl221@naver.com</p>
         </footer>
 		<script>
 			document.getElementById('footer').style.display = 'none';
