--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="blog.html">Blog</a></li>
-            <li><a href="#">Study</a></li>
+            <li><a href="study.html">Study</a></li>
             <li><a href="#">For you</a></li>
         </ul>
     </nav>
