--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,7 @@
     </main>
     <footer>
         <span>개발자 연락처<br>
-            류대희 이현비 박영규 | fbeogmlsla@gmail.com
+            DayDay 개복치 0q | fbeogmlsla@gmail.com
         </span>
     </footer>
     <script src="topscroll.js"></script>
