--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,8 @@
                     <li><a href="index.html">메인화면으로</a></li>
                     <li><a href="blog/1.html">SULLEN 홍보</a></li>
                     <li><a href="blog/2.html">MBTI에 관하여</a></li>
-                    <li><a href="blog/3.html">MBTI와 강아지</a></li>
+                    <li><a href="blog/3.html">MBTI와 강아지 성격</a></li>
+					<li><a href="blog/4.html">강아지MBTI 제작방법</a></li>
                 </ul>
             </div>
         </aside>
