--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="blog.html">Blog</a></li>
             <li><a href="study.html">Study</a></li>
-            <li><a href="#">For you</a></li>
+            <li><a href="foryou.html">For you</a></li>
         </ul>
     </nav>
     <main class="index-main">
